# performace-poc

./: .gitignore  LICENSE  README.md  pyproject.toml
python_to_cython/: cython_performance.pyx  setup.py  test_cython_performance.py  test_performance.py
src/py_performace_poc/: performace.py  setup.py
