[build-system]
requires = [
    "setuptools>=61.0"
]
build-backend = "setuptools.build_meta"


[project]
name = "py_performance_poc"
version = "0.0.3"
authors = [
  { name="Example Author", email="ratnesh.chandak@gmail.com" },
]
description = "A small example package for poc on different python methods"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ratnesh93/performace-poc"
"Bug Tracker" = "https://github.com/ratnesh93/performace-poc/issues"